# TracerDiff

./: .gitignore  README.md  pyproject.toml  requirements.txt
conda-envs/: jax_env_pip.yml
examples/: README.md  depositional_systems.ipynb
src/tracerdiff/: __init__.py  model.py  output.py  utils.py
tests/: test.py  test_run.py
